#ifndef DASHAI_BROWSER_ASOL_CPP_ASOL_MANAGER_H_
#define DASHAI_BROWSER_ASOL_CPP_ASOL_MANAGER_H_

#include <string>
#include <memory>

// Forward declare gRPC types if we are using gRPC for IPC.
// For now, we'll assume direct use of generated protobuf messages
// and a conceptual IPC mechanism.
// namespace grpc {
// class Channel;
// }

// Include the generated protobuf header.
// The path will depend on how GN configures the include directories
// for generated protobuf files. It's often something like:
// "gen/proto/asol_service.pb.h" or directly "asol_service.pb.h"
// if the include paths are set up correctly.
#include "proto/asol_service.pb.h" // Adjusted path

namespace dashaibrowser {
namespace asol {

class AsolManager {
 public:
  AsolManager();
  ~AsolManager();

  // Initializes the ASOL manager, potentially setting up communication channels.
  bool Initialize();

  // Method to request a summary via IPC.
  // This is a simplified synchronous example for now.
  // In reality, this would likely be asynchronous.
  ipc::SummaryResponse GetSummary(const ipc::SummaryRequest& request);

  // Placeholder for other AI service interactions
  // ipc::TranslationResponse TranslateText(const ipc::TranslationRequest& request);

 private:
  // Conceptual pointer to an IPC client or channel.
  // If using gRPC, this might be a stub:
  // std::unique_ptr<ipc::AsolInterface::Stub> stub_;
  // Or if using Mojo:
  // mojo::Remote<ipc::mojom::AsolInterface> remote_asol_service_;

  // For simulation, we don't need actual IPC setup yet.
  bool initialized_ = false;
};

}  // namespace asol
}  // namespace dashaibrowser

#endif  // DASHAI_BROWSER_ASOL_CPP_ASOL_MANAGER_H_
