#include "asol/cpp/asol_manager.h"

// Potentially include gRPC headers or Mojo headers if used for IPC.
// For now, this is a conceptual implementation.
#include <iostream> // For placeholder logging

namespace dashaibrowser {
namespace asol {

AsolManager::AsolManager() {
  // Constructor implementation
  // In a real scenario, might initialize IPC client stubs here or in Initialize().
}

AsolManager::~AsolManager() {
  // Destructor implementation
}

bool AsolManager::Initialize() {
  // Conceptual initialization.
  // This could involve connecting to a gRPC service, establishing a Mojo pipe,
  // or setting up other forms of IPC with the actual ASOL backend (which might be Rust).
  std::cout << "AsolManager: Initializing..." << std::endl;
  initialized_ = true; // Simulate successful initialization
  std::cout << "AsolManager: Initialization complete." << std::endl;
  return initialized_;
}

ipc::SummaryResponse AsolManager::GetSummary(const ipc::SummaryRequest& request) {
  ipc::SummaryResponse response;
  response.set_request_id(request.request_id());

  if (!initialized_) {
    response.set_success(false);
    response.set_error_message("ASOL Manager not initialized.");
    std::cerr << "AsolManager::GetSummary Error: Not initialized." << std::endl;
    return response;
  }

  std::cout << "AsolManager::GetSummary: Received request ID " << request.request_id()
            << " for text: \"" << request.original_text().substr(0, 50) << "...\""
            << std::endl;

  // --- Placeholder for actual IPC call to ASOL backend ---
  // This is where the C++ component would send the request to the Rust (or other)
  // part of ASOL that handles the actual AI API calls.
  // For simulation, we'll just create a dummy response.

  if (request.original_text().empty()) {
    response.set_success(false);
    response.set_error_message("Original text is empty.");
  } else {
    response.set_success(true);
    response.set_summarized_text("This is a simulated summary for: " + request.original_text());
  }
  // --- End of placeholder ---

  std::cout << "AsolManager::GetSummary: Sending response for ID " << response.request_id()
            << ", Success: " << response.success() << std::endl;

  return response;
}

// Placeholder for other AI service interactions
// ipc::TranslationResponse AsolManager::TranslateText(const ipc::TranslationRequest& request) {
//   ipc::TranslationResponse response;
//   // ... similar logic ...
//   response.set_translated_text("Simulated translation of: " + request.text_to_translate());
//   return response;
// }

}  // namespace asol
}  // namespace dashaibrowser
